Testing/TestCache/test43.txt
Error trace on line: 57, column: 5 in file "Core".
inl char = type ' '
    ^
Variable array_is not bound.
